<resources>
    <string name="app_name">YannickBray</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Yannick Bray</string>
    <string name="nav_header_subtitle">Votre boutique de livre usagé</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- Livre detail -->
    <string name="img_livre_description">Image du livre</string>
    <string name="txv_en_tete_commentaires"><u>Commentaires</u></string>
    <string name="txv_prix_livre">Prix du livre</string>
    <string name="txv_auteur_livre">Auteur du livre</string>
    <string name="txv_categorie_livre">Categories du livre</string>
    <string name="txv_code_livre">Code du livre</string>

    <!-- Ajout commentaire -->
    <string name="txt_utilisateur">Votre nom et prénom</string>
    <string name="txb_commentaire">Votre commentaire</string>
    <string name="btn_ajouter_commentaire">Ajouter</string>
    <string name="alerte_commentaire_incomplet">Veuillez préciser un nom et une cote</string>
    <string name="alerte_commentaire_erreur">Il y a eut une erreur lors de l\'ajout de votre commentaire. Veuillez réessayer plus tard</string>
    <string name="alerte_commentaire_ajoute">Votre commentaire a été ajouté</string>

    <string name="menu_home">Accueil</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_categorie">Catégories</string>
    <string name="menu_succursale">Succursales</string>
</resources>
