<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="qc.ca.cstj.yannickbray.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_share"
        android:name="qc.ca.cstj.yannickbray.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="qc.ca.cstj.yannickbray.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
    <fragment
        android:id="@+id/nav_succursale"
        android:name="qc.ca.cstj.yannickbray.ui.succursale.SuccursaleFragment"
        android:label="Succursales"
        tools:layout="@layout/fragment_succursale">
        <action
            android:id="@+id/action_nav_succursale_to_nav_detail_succursale"
            app:destination="@id/nav_detail_succursale"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/nav_categorie"
        android:name="qc.ca.cstj.yannickbray.ui.categorie.CategorieFragment"
        android:label="Catégories"
        tools:layout="@layout/fragment_categorie">
        <action
            android:id="@+id/action_nav_categorie_to_nav_livre_categorie"
            app:destination="@id/nav_livre_categorie"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/nav_livre_categorie"
        android:name="qc.ca.cstj.yannickbray.ui.livre.LivreCategorieFragment"
        android:label="Livres"
        tools:layout="@layout/fragment_livre_categorie">
        <argument
            android:name="categorie"
            app:argType="qc.ca.cstj.yannickbray.models.Categorie" />
        <action
            android:id="@+id/action_nav_livre_categorie_to_detailLivreFragment"
            app:destination="@id/nav_detail_livre"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/nav_detail_succursale"
        android:name="qc.ca.cstj.yannickbray.ui.succursale.DetailSuccursaleFragment"
        android:label="Succursale"
        tools:layout="@layout/fragment_detail_succursale">
        <argument
            android:name="succursale"
            app:argType="qc.ca.cstj.yannickbray.models.Succursale" />
    </fragment>
    <fragment
        android:id="@+id/nav_detail_livre"
        android:name="qc.ca.cstj.yannickbray.ui.livre.DetailLivreFragment"
        tools:layout="@layout/fragment_detail_livre">
        <argument
            android:name="livre"
            app:argType="qc.ca.cstj.yannickbray.models.Livre" />
    </fragment>
</navigation>